--- a/calculateTax.html
+++ b/calculateTax.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Training Application Form</title>
+    <title></title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -11,7 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <script src="./js.js"></script>
 
@@ -66,8 +67,8 @@
 
         .banner {
             position: relative;
-            height: 210px;
-            background-image: url("/uploads/media/default/0001/01/3f0d2969f2cffeb123ab1a6fa7408bf87bd34bd3.jpeg");
+            height: 110px;
+            background-image: url("idtax.png");
             background-size: cover;
             display: flex;
             justify-content: center;
@@ -91,7 +92,7 @@
         }
 
         input {
-            width: calc(100% - 10px);
+            width: 100% ;
             padding: 5px;
         }
 
@@ -242,29 +243,62 @@
 
 <body>
     <div class="testbox">
-        <form >
+        <form action="#" onsubmit="return false">
             <div class="banner">
-                <h1>Training Application Form</h1>
+                <h1>Online Pajak - Coding Challange</h1>
             </div>
-            <h2>Applicant Details</h2>
-
+            <br>
+            <h2 class="text-center offset-4 col-md-4 col-sm-12">Personal Income Tax</h2>
+<br>
             <div class="row">
-                <div class="col-md-6">
+                <div class="offset-4 col-md-4 col-sm-12">
                     <p>Salary</p>
-                    <input type="number" min="0" id="salaryMonthly" name="salaryMonthly" placeholder="tes tes tes" />
+                    <input type="number" min="0" max='999999999999999' oninput="updateSalary()" id="salaryMonthly"
+                        name="salaryMonthly" placeholder="0" />
                 </div>
-                <div class="col-md-6">
+
+            </div>
+            <div class="row">
+                <div class="offset-4 col-md-4 col-sm-12">
                     <p>Annual Salary</p>
-                    <input type="text" readonly="true" id="salaryAnnual" name="salaryAnnual" placeholder="0" />
+                    <input type="text" disabled readonly="true" id="salaryAnnual" name="salaryAnnual" placeholder="0" />
                 </div>
             </div>
 
+            <div class="offset-4 col-md-4 col-sm-12">
+                <hr>
+            </div>
             <div class="row">
-                <div class="offset-3 col-md-6">
-                    <p>Your Personal Income Tax</p>
-                    <input  type="number" min="0" id="incomeTax" name="incomeTax" placeholder="0" />
+                <div class="offset-4 col-md-4 col-sm-12">
+                    <select id="profile">
+                        <option value="">Tax Reliefs</option>
+                        <option value="TK0">TK0 - Single</option>
+                        <option value="K0">K0 - Married with no dependant</option>
+                        <option value="K1">K1 - Married with 1 dependant</option>
+                        <option value="K2">K2 - Married with 2 dependants</option>
+                        <option value="K3">K3 - Married with 3 dependants</option>
+                    </select>
                 </div>
             </div>
+            <div class="row">
+                <div class="offset-4 col-md-2">
+                    <div>
+                        <button type="submit" readonly="true" onclick="calculateTax()">See Income Tax </button>
+                    </div>
+                   
+                </div>
+            </div>
+            <div class="offset-4 col-md-4 col-sm-12">
+                <hr>
+            </div>
+            <div class="row">
+                <div class="offset-4 col-md-4 col-sm-12">
+                    <p>Your Personal Income Tax</p>
+                    <input type="number" disabled min="0" id="totalTax" name="incomeTax" placeholder="0" />
+                </div>
+            </div>
+
+
             <!-- <div class="item">
                 <p>Fax</p>
                 <input type="text" name="name" />
@@ -279,9 +313,6 @@
                     </div>
                 </div>
             </div> -->
-            <div class="btn-block">
-                <button type="submit" onclick="msgprint('aaabbbcccddd')">Send</button>
-            </div>
 
 
             <!-- <div class="item">
